[gd_scene load_steps=19 format=3 uid="uid://cgcph1mual0b8"]

[ext_resource type="Theme" uid="uid://d018ofb37nf7u" path="res://assets/resources/themes/default.tres" id="1_wbtf6"]
[ext_resource type="Script" path="res://scripts/user_interface/play_mode_selection.gd" id="2_j1dwl"]
[ext_resource type="Script" path="res://scripts/utility/play_mode/play_mode.gd" id="3_syb7d"]
[ext_resource type="Resource" uid="uid://cdb1s2jwkb0yd" path="res://assets/resources/levels/play_mode/tutorial_mode.tres" id="4_hwcqv"]
[ext_resource type="Resource" uid="uid://bn7pmxwdrvgdw" path="res://assets/resources/levels/play_mode/classic_mode.tres" id="4_sd7pi"]
[ext_resource type="StyleBox" uid="uid://d3ep4nluuoc3h" path="res://assets/resources/themes/backdrop_panel.tres" id="5_fuib4"]
[ext_resource type="Resource" uid="uid://cqsjj643jp1lf" path="res://assets/resources/levels/play_mode/endless_mode.tres" id="6_0xo1f"]
[ext_resource type="Resource" uid="uid://d0xanyjlyiox4" path="res://assets/resources/levels/play_mode/blitz_mode.tres" id="7_i45mq"]
[ext_resource type="Texture2D" uid="uid://c5jubmd8054c4" path="res://assets/ui/arrow.png" id="8_du4gt"]
[ext_resource type="Resource" uid="uid://bopno5li70h0j" path="res://assets/resources/levels/play_mode/puzzle_mode.tres" id="8_gywfq"]
[ext_resource type="Theme" uid="uid://dujdfelccpvvo" path="res://assets/resources/themes/primary.tres" id="9_r4e6y"]
[ext_resource type="Texture2D" uid="uid://h48pyaujdk6b" path="res://assets/ui/arrow_left.png" id="10_2lfuk"]
[ext_resource type="Texture2D" uid="uid://b4852v4k8v28w" path="res://assets/ui/blitz_icon.png" id="11_uioaw"]
[ext_resource type="Texture2D" uid="uid://16abxdrsop2l" path="res://assets/ui/locked_mode.png" id="12_2puft"]
[ext_resource type="Texture2D" uid="uid://cnfj6uq1m6f7" path="res://assets/ui/completed_mode.png" id="12_cqdan"]
[ext_resource type="FontFile" uid="uid://jk2k0v0x2552" path="res://assets/ui/fonts/FiraMono-Bold.ttf" id="13_jwu11"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k64a5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vniwo"]

[node name="PlayModeSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wbtf6")
script = ExtResource("2_j1dwl")
arena_modes = Array[ExtResource("3_syb7d")]([ExtResource("4_hwcqv"), ExtResource("4_sd7pi"), ExtResource("6_0xo1f"), ExtResource("7_i45mq"), ExtResource("8_gywfq")])

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("5_fuib4")

[node name="Panel" type="Panel" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -225.0
offset_right = 300.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_k64a5")

[node name="ArenaSelection" type="VBoxContainer" parent="Background/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Container" type="HBoxContainer" parent="Background/Panel/ArenaSelection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="LeftBox" type="VBoxContainer" parent="Background/Panel/ArenaSelection/Container"]
layout_mode = 2

[node name="LeftBtn" type="Button" parent="Background/Panel/ArenaSelection/Container/LeftBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_constants/icon_max_width = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_vniwo")
icon = ExtResource("10_2lfuk")
flat = true

[node name="HSeparator" type="HSeparator" parent="Background/Panel/ArenaSelection/Container/LeftBox"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Content" type="VBoxContainer" parent="Background/Panel/ArenaSelection/Container"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/Panel/ArenaSelection/Container/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="ModeIcon" type="TextureRect" parent="Background/Panel/ArenaSelection/Container/Content/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_wbtf6")
texture = ExtResource("11_uioaw")
expand_mode = 4
stretch_mode = 5

[node name="LockedIcon" type="TextureRect" parent="Background/Panel/ArenaSelection/Container/Content/MarginContainer"]
unique_name_in_owner = true
visible = false
z_index = 100
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_wbtf6")
texture = ExtResource("12_2puft")
expand_mode = 5
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Background/Panel/ArenaSelection/Container/Content/MarginContainer/LockedIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="LockedMsg" type="RichTextLabel" parent="Background/Panel/ArenaSelection/Container/Content/MarginContainer/LockedIcon/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_wbtf6")
theme_override_fonts/bold_font = ExtResource("13_jwu11")
bbcode_enabled = true
text = "LOCKED_MSG"
fit_content = true

[node name="CompletedIcon" type="TextureRect" parent="Background/Panel/ArenaSelection/Container/Content/MarginContainer"]
unique_name_in_owner = true
visible = false
z_index = 100
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_wbtf6")
texture = ExtResource("12_cqdan")
expand_mode = 5
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Background/Panel/ArenaSelection/Container/Content/MarginContainer/CompletedIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="CompletedMsg" type="RichTextLabel" parent="Background/Panel/ArenaSelection/Container/Content/MarginContainer/CompletedIcon/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_wbtf6")
theme_override_fonts/bold_font = ExtResource("13_jwu11")
bbcode_enabled = true
text = "COMPLETED_MSG"
fit_content = true

[node name="PlayBtn" type="Button" parent="Background/Panel/ArenaSelection/Container/Content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
focus_mode = 0
theme = ExtResource("9_r4e6y")
text = "PLAY"
icon_alignment = 2

[node name="RightBox" type="VBoxContainer" parent="Background/Panel/ArenaSelection/Container"]
layout_mode = 2

[node name="RightBtn" type="Button" parent="Background/Panel/ArenaSelection/Container/RightBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_constants/icon_max_width = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_vniwo")
icon = ExtResource("8_du4gt")
flat = true

[node name="HSeparator2" type="HSeparator" parent="Background/Panel/ArenaSelection/Container/RightBox"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="pressed" from="Background/Panel/ArenaSelection/Container/LeftBox/LeftBtn" to="." method="_on_left_btn_pressed"]
[connection signal="gui_input" from="Background/Panel/ArenaSelection/Container/Content/MarginContainer/ModeIcon" to="." method="_on_mode_icon_gui_input"]
[connection signal="pressed" from="Background/Panel/ArenaSelection/Container/Content/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="Background/Panel/ArenaSelection/Container/RightBox/RightBtn" to="." method="_on_right_btn_pressed"]
